@@ -1,3 +1,11 @@
+Tue Mar 13 19:36:09 UTC 2007  Steve Huston  <shuston@riverace.com>
+
+        * ace/OS_NS_stdio.cpp (snprintf): Back off use of _vsnwprintf_s() in
+          the wide-char version as was done in the narrow-char version (see
+          Mon Mar 12 17:55:18 UTC 2007  Steve Huston  <shuston@riverace.com>).
+          Also, in sprintf(), correct the selection of 3 vs 4 arg call for
+          WinCE.
+
 Tue Mar 13 18:43:28 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/tao_orb_tests.lst:
